--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ aiosignal==1.3.1
 altair==5.3.0
 annotated-types==0.7.0
 anyio==4.4.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+asttokens==2.4.1
 attrs==23.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
@@ -11,15 +11,15 @@ cachetools==5.3.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+colorama==0.4.6
+comm==0.2.2
 dataclasses-json==0.6.7
-debugpy @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/debugpy_1699554994633/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+debugpy==1.6.7
+decorator==5.1.1
 distlib==0.3.8
 distro==1.9.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
+exceptiongroup==1.2.0
+executing==2.0.1
 faiss-cpu==1.8.0
 ffmpeg-python==0.2.0
 filelock==3.14.0
@@ -33,18 +33,18 @@ h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1710971335535/work
+importlib_metadata==7.1.0
 intel-openmp==2021.4.0
-ipykernel @ file:///D:/bld/ipykernel_1717717683217/work
-ipython @ file:///D:/bld/ipython_1717182928131/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+ipykernel==6.29.4
+ipython==8.25.0
+jedi==0.19.1
 Jinja2==3.1.4
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1716472197302/work
-jupyter_core @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/jupyter_core_1701796658071/work
+jupyter_client==8.6.2
+jupyter_core==5.5.0
 langchain==0.2.3
 langchain-community==0.2.4
 langchain-core==0.2.5
@@ -56,14 +56,14 @@ llvmlite==0.42.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.3
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 mkl==2021.4.0
 more-itertools==10.3.0
 mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+nest_asyncio==1.6.0
 networkx==3.3
 numba==0.59.1
 numpy==1.26.4
@@ -72,39 +72,40 @@ openai-whisper==20231117
 orjson==3.10.4
 packaging==23.2
 pandas==2.2.2
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+parso==0.8.4
+pickleshare==0.7.5
 pillow==10.3.0
+pip==24.0
 pipenv==2024.0.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1715777629804/work
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1718047967974/work
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
 protobuf==4.25.3
-psutil @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/psutil_1699482842340/work
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+psutil==5.9.0
+pure-eval==0.2.2
 pyarrow==16.1.0
 pydantic==2.7.3
 pydantic_core==2.18.4
 pydeck==0.9.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+Pygments==2.18.0
+python-dateutil==2.9.0
 python-dotenv==1.0.1
 pytube==15.0.0
 pytz==2024.1
 pywin32==305.1
 PyYAML==6.0.1
-pyzmq @ file:///C:/b/abs_89aq69t0up/croot/pyzmq_1705605705281/work
+pyzmq==25.1.2
 referencing==0.35.1
 regex==2024.5.15
 requests==2.32.3
 rich==13.7.1
 rpds-py==0.18.1
 setuptools==69.5.1
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
 SQLAlchemy==2.0.30
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+stack-data==0.6.2
 streamlit==1.35.0
 sympy==1.12.1
 tbb==2021.12.0
@@ -113,17 +114,17 @@ tiktoken==0.7.0
 toml==0.10.2
 toolz==0.12.1
 torch==2.3.1
-tornado @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/tornado_1699496839511/work
+tornado==6.3.3
 tqdm==4.66.4
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
+traitlets==5.14.3
 types-requests==2.32.0.20240602
+typing_extensions==4.12.2
 typing-inspect==0.9.0
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
 tzdata==2024.1
 urllib3==2.2.1
 virtualenv==20.26.2
 watchdog==4.0.1
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+wcwidth==0.2.13
 wheel==0.43.0
 yarl==1.9.4
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1718013267051/work
+zipp==3.19.2
