--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
 blinker==1.8.2
+Brotli==1.1.0
 cachetools==5.3.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
@@ -42,6 +43,7 @@ mkl==2021.4.0
 more-itertools==10.3.0
 mpmath==1.3.0
 multidict==6.0.5
+mutagen==1.47.0
 networkx==3.3
 numba==0.59.1
 numpy==1.26.4
@@ -53,12 +55,15 @@ pandas==2.2.2
 pillow==10.3.0
 protobuf==4.25.3
 pyarrow==16.1.0
+pycryptodomex==3.20.0
 pydantic==2.7.3
 pydantic_core==2.18.4
 pydeck==0.9.1
+pyee==11.1.0
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-ffmpeg==2.0.12
 pytube==15.0.0
 pytz==2024.1
 PyYAML==6.0.1
@@ -85,5 +90,6 @@ typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.1
 watchdog==4.0.1
+websockets==12.0
 yarl==1.9.4
-yt_dlp
+yt-dlp==2024.5.27
